// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/toggle/Toggle should render properly when isToggleRightAligned prop is true 1`] = `
<div
  className="bdl-Toggle bdl-is-toggleRightAligned"
>
  <label
    className="bdl-Toggle-label"
  >
    <input
      className="bdl-Toggle-input"
      name="toggle"
      onChange={[Function]}
      type="checkbox"
    />
    <div
      className="bdl-Toggle-labelContent"
      key="bdl-Toggle-labelContent"
    >
      Enter things
    </div>
    <div
      className="bdl-Toggle-switch"
      key="bdl-Toggle-switch"
    />
  </label>
</div>
`;

exports[`components/toggle/Toggle should render properly when random props are passed in 1`] = `
<div
  className="bdl-Toggle"
>
  <label
    className="bdl-Toggle-label"
  >
    <input
      className="bdl-Toggle-input"
      data-resin-target="toggle"
      name="toggle"
      onChange={[Function]}
      type="checkbox"
    />
    <div
      className="bdl-Toggle-switch"
      key="bdl-Toggle-switch"
    />
    <div
      className="bdl-Toggle-labelContent"
      key="bdl-Toggle-labelContent"
    >
      Enter things
    </div>
  </label>
</div>
`;
